Fix the loading of resource bundles in named module and fix tests. Starting with this commit, all JUnit tests should pass.